fixing wrapping of logo

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -70,6 +70,8 @@ body {
 footer {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
     font-size: 12px;
     text-align: center;
     margin: 30px 0 20px 0;
